--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </header>
       <div class="card">
         <div class="card-header">
-          <h2 class="blink">Generate a COOL Random Password</h2>
+          <h2> Generate a COOL Random Password</h2>
         </div>
         <div class="card-body">
           <textarea
